# video-digital-stable-tested

./: .gitignore  README.md  requirements.txt
video-stable-cpp/: .gitignore  CMakeLists.txt  Makefile  main.cpp  stabilizer-v1.cpp  stabilizer-v2.cpp
video-stable-version-1/: example_stabilize_frame.py  main.py
video-stable-version-1/cstable/: CMakeLists.txt
video-stable-version-1/cstable/includes/: auto_border_utils.h  border_utils.h  cv2_utils.h  frame.h  frame_queue.h  general_utils.h  layer_utils.h  main_utils.h  pop_deque.h  vidstab_utils.h
video-stable-version-1/cstable/src/: auto_border_utils.cpp  border_utils.cpp  cv2_utils.cpp  frame_queue.cpp  general_utils.cpp  layer_utils.cpp  main_utils.cpp  vidstab_utils.cpp
video-stable-version-1/src/: VidStab.py  VidStabOptimized.py  __init__.py  general_utils.py
video-stable-version-2/: main.py
